--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Todoist_Global_Shortcuts_WIN10
-description: Since TODOIST its Windows 10 app doesn’t support global shortcuts at the moment. I made a little workaround for the "open TODOIST" global shortcut.
+description: Since TODOIST its Windows 10 app doesnâ€™t support global shortcuts at the moment. I made a little workaround for the "open TODOIST" global shortcut.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-slate
