--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: TODOIST global shortcuts WIN 10 workaround
+title: TODOIST - Global shortcuts WIN 10
 description: Since TODOIST its Windows 10 app doesn’t support global shortcuts at the moment. I made a little workaround for the "open TODOIST" global shortcut.
 show_downloads: true
 google_analytics:
