--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: TODOIST - Global shortcuts WIN 10
 description: Since TODOIST its Windows 10 app doesn’t support global shortcuts at the moment. I made a little workaround for the "open TODOIST" global shortcut.
-show_downloads: false
+show_downloads: true
+zip_url:  https://github.com/rickstaa/Todoist_Global_Shortcuts_WIN10/archive/master.zip
 google_analytics:
 theme: jekyll-theme-slate
