--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: TODOIST - Global shortcuts WIN 10
+description:  
 show_downloads: true
 zip_url:  https://github.com/rickstaa/Todoist_Global_Shortcuts_WIN10/archive/master.zip
 google_analytics:
