--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: TODOIST - Global shortcuts WIN 10
-description: Workaround for global TODOIST shortcuts in the windows 10 APP
+description: Workaround for the windows 10 Todoist app
 show_downloads: true
 zip_url:  https://github.com/rickstaa/Todoist_Global_Shortcuts_WIN10/archive/master.zip
 google_analytics:
