:memo: Adds workarround download button

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
+title: Global Todoist shortcuts for Windows 10
+description: Small workaround that adds global Todoist shortcuts to the windows 10 Todoist app
+show_downloads: true
+zip_url: https://github.com/rickstaa/todoist-global-shortcuts-WIN10/archive/master.zip
+
 theme: jekyll-theme-slate
